--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "nodejs-complete-guide",
   "version": "1.0.0",
   "description": "Complete Node.js Guide",
+  "engines": {
+    "node": "17.x"
+  },
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -20,7 +23,8 @@
     "express-handlebars": "^3.0.0",
     "pug": "^2.0.3"
   },
-  "engines": {
-    "node": "17.3.1"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/bpainter/prove-assignment-CSE341"
   }
 }
