--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
-    "pug": "^2.0.3"
+    "mongodb": "^4.3.1",
+    "mongoose": "^6.2.1",
+    "pug": "^2.0.3",
+    "sequelize": "^6.16.1"
   },
   "repository": {
     "type": "git",
