--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "connect-flash": "^0.1.1",
     "connect-mongodb-session": "^3.1.1",
     "csurf": "^1.11.0",
+    "dotenv": "^16.0.0",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
@@ -29,11 +30,14 @@
     "express-validator": "^6.14.0",
     "mongodb": "^4.3.1",
     "mongoose": "^6.2.1",
+    "multer": "^1.4.4",
     "mysql2": "^2.3.3",
     "nodemailer": "^6.7.2",
     "nodemailer-sendgrid-transport": "^0.2.0",
+    "pdfkit": "^0.13.0",
     "pug": "^2.0.3",
-    "sequelize": "^6.16.1"
+    "sequelize": "^6.16.1",
+    "stripe": "^8.207.0"
   },
   "repository": {
     "type": "git",
